Fixed title size on mobile for portfolio details.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -760,6 +760,8 @@ border-top-color: #333;
     width: fit-content;
     column-gap: 1em;
   }
+
+  
 }
 
 .portfolio .portfolio-wrap:hover::before {
@@ -1218,6 +1220,16 @@ figcaption {
     margin:0;
   }
 
+  .portfolio-details h2{
+    color: white;
+    font-size: 2.5rem;
+    font-weight: bolder;
+    font-family: "Lato", sans-serif;
+    font-style: normal;
+    line-height: normal;
+    text-transform: uppercase;
+    overflow: auto;
+  }
   
 
 }
